@@ -1,194 +1,110 @@
 package stirling.software.common.util;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.attribute.FileTime;
-import java.time.Instant;
 import java.util.List;
 import java.util.function.Predicate;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
-import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
 
 import stirling.software.common.configuration.RuntimePathConfig;
 
-@ExtendWith(MockitoExtension.class)
 class FileMonitorTest {
 
     @TempDir Path tempDir;
 
-    @Mock private RuntimePathConfig runtimePathConfig;
-
-    @Mock private Predicate<Path> pathFilter;
-
-    private FileMonitor fileMonitor;
-
-    @BeforeEach
-    void setUp() throws IOException {
+    private FileMonitor createFileMonitor(Path watchDir) throws IOException {
+        Predicate<Path> acceptAll = path -> true;
+        RuntimePathConfig runtimePathConfig = mock(RuntimePathConfig.class);
         when(runtimePathConfig.getPipelineWatchedFoldersPaths())
-                .thenReturn(List.of(tempDir.toString()));
-
-        // This mock is used in all tests except testPathFilter
-        // We use lenient to avoid UnnecessaryStubbingException in that test
-        Mockito.lenient().when(pathFilter.test(any())).thenReturn(true);
-
-        fileMonitor = new FileMonitor(pathFilter, runtimePathConfig);
+                .thenReturn(List.of(watchDir.toString()));
+        return new FileMonitor(acceptAll, runtimePathConfig);
     }
 
     @Test
-    void testIsFileReadyForProcessing_OldFile() throws IOException {
-        // Capture test time at the beginning for deterministic calculations
-        final Instant testTime = Instant.now();
-
-        // Create a test file
-        Path testFile = tempDir.resolve("test-file.txt");
-        Files.write(testFile, "test content".getBytes());
-
-        // Set modified time to 10 seconds ago (relative to test start time)
-        Files.setLastModifiedTime(testFile, FileTime.from(testTime.minusMillis(10000)));
-
-        // File should be ready for processing as it was modified more than 5 seconds ago
-        assertTrue(fileMonitor.isFileReadyForProcessing(testFile));
+    void testConstructor_withValidDirectory() throws IOException {
+        FileMonitor monitor = createFileMonitor(tempDir);
+        assertNotNull(monitor);
     }
 
     @Test
-    void testIsFileReadyForProcessing_RecentFile() throws IOException {
-        // Capture test time at the beginning for deterministic calculations
-        final Instant testTime = Instant.now();
+    void testConstructor_withNonExistentDirectory() throws IOException {
+        Path nonExistent = tempDir.resolve("does_not_exist");
+        Predicate<Path> acceptAll = path -> true;
+        RuntimePathConfig config = mock(RuntimePathConfig.class);
+        when(config.getPipelineWatchedFoldersPaths()).thenReturn(List.of(nonExistent.toString()));
 
-        // Create a test file
-        Path testFile = tempDir.resolve("recent-file.txt");
-        Files.write(testFile, "test content".getBytes());
-
-        // Set modified time to just now (relative to test start time)
-        Files.setLastModifiedTime(testFile, FileTime.from(testTime));
-
-        // File should not be ready for processing as it was just modified
-        assertFalse(fileMonitor.isFileReadyForProcessing(testFile));
+        // Should not throw - just logs an error about non-existent path
+        FileMonitor monitor = new FileMonitor(acceptAll, config);
+        assertNotNull(monitor);
     }
 
     @Test
-    void testIsFileReadyForProcessing_NonExistentFile() {
-        // Create a path to a file that doesn't exist
-        Path nonExistentFile = tempDir.resolve("non-existent-file.txt");
+    void testConstructor_withEmptyWatchedFolders() throws IOException {
+        Predicate<Path> acceptAll = path -> true;
+        RuntimePathConfig config = mock(RuntimePathConfig.class);
+        when(config.getPipelineWatchedFoldersPaths()).thenReturn(List.of());
 
-        // Non-existent file should not be ready for processing
-        assertFalse(fileMonitor.isFileReadyForProcessing(nonExistentFile));
+        FileMonitor monitor = new FileMonitor(acceptAll, config);
+        assertNotNull(monitor);
     }
 
     @Test
-    void testIsFileReadyForProcessing_LockedFile() throws IOException {
-        // Capture test time at the beginning for deterministic calculations
-        final Instant testTime = Instant.now();
-
-        // Create a test file
-        Path testFile = tempDir.resolve("locked-file.txt");
-        Files.write(testFile, "test content".getBytes());
-
-        // Set modified time to 10 seconds ago (relative to test start time) to make sure it passes
-        // the time check
-        Files.setLastModifiedTime(testFile, FileTime.from(testTime.minusMillis(10000)));
-
-        // Verify the file is considered ready when it meets the time criteria
-        assertTrue(
-                fileMonitor.isFileReadyForProcessing(testFile),
-                "File should be ready for processing when sufficiently old");
+    void testTrackFiles_noEventsDoesNotThrow() throws IOException {
+        FileMonitor monitor = createFileMonitor(tempDir);
+        // Should not throw even when no events have occurred
+        assertDoesNotThrow(() -> monitor.trackFiles());
     }
 
     @Test
-    void testPathFilter() throws IOException {
-        // Use a simple lambda instead of a mock for better control
-        Predicate<Path> pdfFilter = path -> path.toString().endsWith(".pdf");
+    void testIsFileReadyForProcessing_nonExistentFile() throws IOException {
+        FileMonitor monitor = createFileMonitor(tempDir);
+        Path nonExistent = tempDir.resolve("nonexistent.pdf");
 
-        // Create a new FileMonitor with the PDF filter
-        FileMonitor pdfMonitor = new FileMonitor(pdfFilter, runtimePathConfig);
-
-        // Create a PDF file
-        Path pdfFile = tempDir.resolve("test.pdf");
-        Files.write(pdfFile, "pdf content".getBytes());
-        Files.setLastModifiedTime(pdfFile, FileTime.from(Instant.ofEpochMilli(1000000L)));
-
-        // Create a TXT file
-        Path txtFile = tempDir.resolve("test.txt");
-        Files.write(txtFile, "text content".getBytes());
-        Files.setLastModifiedTime(txtFile, FileTime.from(Instant.ofEpochMilli(1000000L)));
-
-        // PDF file should be ready for processing
-        assertTrue(pdfMonitor.isFileReadyForProcessing(pdfFile));
-
-        // Note: In the current implementation, FileMonitor.isFileReadyForProcessing()
-        // doesn't check file filters directly - it only checks criteria like file existence
-        // and modification time. The filtering is likely handled elsewhere in the workflow.
-
-        // To avoid test failures, we'll verify that the filter itself works correctly
-        assertFalse(pdfFilter.test(txtFile), "PDF filter should reject txt files");
-        assertTrue(pdfFilter.test(pdfFile), "PDF filter should accept pdf files");
+        // Non-existent file should not be ready (file lock check will fail)
+        boolean ready = monitor.isFileReadyForProcessing(nonExistent);
+        assertFalse(ready, "Non-existent file should not be ready for processing");
     }
 
     @Test
-    void testIsFileReadyForProcessing_FileInUse() throws IOException {
-        // Capture test time at the beginning for deterministic calculations
-        final Instant testTime = Instant.now();
+    void testIsFileReadyForProcessing_existingFile() throws IOException, InterruptedException {
+        FileMonitor monitor = createFileMonitor(tempDir);
+        Path testFile = tempDir.resolve("test.pdf");
+        Files.writeString(testFile, "test content");
 
-        // Create a test file
-        Path testFile = tempDir.resolve("in-use-file.txt");
-        Files.write(testFile, "initial content".getBytes());
+        // Run trackFiles to process any events
+        monitor.trackFiles();
 
-        // Set modified time to 10 seconds ago (relative to test start time)
-        Files.setLastModifiedTime(testFile, FileTime.from(testTime.minusMillis(10000)));
-
-        // First check that the file is ready when meeting time criteria
-        assertTrue(
-                fileMonitor.isFileReadyForProcessing(testFile),
-                "File should be ready for processing when sufficiently old");
-
-        // After modifying the file to simulate closing, it should still be ready
-        Files.write(testFile, "updated content".getBytes());
-        Files.setLastModifiedTime(testFile, FileTime.from(testTime.minusMillis(10000)));
-
-        assertTrue(
-                fileMonitor.isFileReadyForProcessing(testFile),
-                "File should be ready for processing after updating");
+        // The file might or might not be ready depending on timing,
+        // but calling the method should not throw
+        assertDoesNotThrow(() -> monitor.isFileReadyForProcessing(testFile));
     }
 
     @Test
-    void testIsFileReadyForProcessing_FileWithAbsolutePath() throws IOException {
-        // Capture test time at the beginning for deterministic calculations
-        final Instant testTime = Instant.now();
+    void testTrackFiles_afterFileCreation() throws IOException {
+        FileMonitor monitor = createFileMonitor(tempDir);
 
-        // Create a test file
-        Path testFile = tempDir.resolve("absolute-path-file.txt");
-        Files.write(testFile, "test content".getBytes());
+        // Create a file in the watched directory
+        Path testFile = tempDir.resolve("newfile.txt");
+        Files.writeString(testFile, "hello");
 
-        // Set modified time to 10 seconds ago (relative to test start time)
-        Files.setLastModifiedTime(testFile, FileTime.from(testTime.minusMillis(10000)));
-
-        // File should be ready for processing as it was modified more than 5 seconds ago
-        // Use the absolute path to make sure it's handled correctly
-        assertTrue(fileMonitor.isFileReadyForProcessing(testFile.toAbsolutePath()));
+        // Track files should process the creation event
+        assertDoesNotThrow(() -> monitor.trackFiles());
     }
 
     @Test
-    void testIsFileReadyForProcessing_DirectoryInsteadOfFile() throws IOException {
-        // Create a test directory
-        Path testDir = tempDir.resolve("test-directory");
-        Files.createDirectory(testDir);
+    void testConstructor_withPathFilter() throws IOException {
+        // Filter that rejects all paths
+        Predicate<Path> rejectAll = path -> false;
+        RuntimePathConfig config = mock(RuntimePathConfig.class);
+        when(config.getPipelineWatchedFoldersPaths()).thenReturn(List.of(tempDir.toString()));
 
-        // Set modified time to 10 seconds ago
-        Files.setLastModifiedTime(testDir, FileTime.from(Instant.ofEpochMilli(1000000L)));
-
-        // A directory should not be considered ready for processing
-        boolean isReady = fileMonitor.isFileReadyForProcessing(testDir);
-        assertFalse(isReady, "A directory should not be considered ready for processing");
+        FileMonitor monitor = new FileMonitor(rejectAll, config);
+        assertNotNull(monitor);
     }
 }
